[package]
name = "google_authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11", features = ["rustls-0_23"] }
actix-files = "0.6.8"
actix-identity = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }

rustls = "0.23"
rustls-pemfile = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["rustls-tls", "http2", "json"], default-features = false }

dotenv = "0.15"
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.28"
spdlog-rs = { version = "0.4.3", features = ["source-location", "log"] }

time = "0.3.43"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"